--- a/src/components/UniqFlag/UniqFlag.css
+++ b/src/components/UniqFlag/UniqFlag.css
@@ -5,7 +5,8 @@
     background-color: #0D1721;
 }
 .uniqImg{
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     border: 2px solid black;
     margin: 30px 0;
 }
